@@ -3,6 +3,7 @@ SubVersion: $Id$
 - ??/??/2007, version 2.81e
 	- [kevin] $2348: delete the temporary file instead of erroring if the user cancels the receive file dialog
 	- [kevin] $2349: fixed progress bar refresh referencing freed memory (#1529247)
+	- [roms]  $2350: send a group file as group, not as backup (bug #1529247)
 
 - 11/12/2006, version 2.81d
 	- [roms]  $2321: store *.sav files in the images folder rather than polluting the application top folder
